--- a/kubernetes/ai-frontend/nginx.conf
+++ b/kubernetes/ai-frontend/nginx.conf
@@ -20,7 +20,13 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_cache_bypass $http_upgrade;
     }
-    
+
+    location /proxy/ai-frontend {
+    	proxy_pass http://ai-frontend:91;
+    	proxy_set_header Host $host;
+    	proxy_set_header X-Real-IP $remote_addr;
+    }
+
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
         root /usr/share/nginx/html;
