--- a/kubernetes/kind-config.yaml
+++ b/kubernetes/kind-config.yaml
@@ -11,10 +11,16 @@ nodes:
       - hostPath: /home/andrei/STD_TEMA_2/cms/myproject
         containerPath: /mnt/myproject
     extraPortMappings:
-    - containerPort: 80    # inside the node
-      hostPort: 80         # on your laptop
+    - containerPort: 30080
+      hostPort: 30080
       protocol: TCP
-    - containerPort: 443
-      hostPort: 443
+      listenAddress: "0.0.0.0"
+    - containerPort: 30090
+      hostPort: 30090
       protocol: TCP
-
+    - containerPort: 30091
+      hostPort: 30091
+      protocol: TCP
+    - containerPort: 80
+      hostPort: 80
+      protocol: TCP
