--- a/kubernetes/apache/service.yaml
+++ b/kubernetes/apache/service.yaml
@@ -1,13 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: cms
+  name: chat-apache
 spec:
   selector:
-    app: cms
-  sessionAffinity: ClientIP
+    app: chat-apache
   ports:
   - port: 80
     targetPort: 80
-    nodePort: 30080
-  type: NodePort
+  type: ClusterIP
