--- a/kubernetes/chat-frontend/deployment.yaml
+++ b/kubernetes/chat-frontend/deployment.yaml
@@ -1,4 +1,3 @@
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -13,19 +12,18 @@ spec:
   template:
     metadata:
       labels:
-        app: chat-frontend
+        app: chat-frontend    
     spec:
       containers:
-        - name: chat-frontend
-          image: kind-registry:5000/chat-frontend:latest
-          imagePullPolicy: Always
-          ports:
-            - containerPort: 90
-          volumeMounts:
-            - name: nginx-config
-              mountPath: /etc/nginx/conf.d/default.conf
-              subPath: default.conf
-      volumes:
+      - name: chat-frontend
+        image: kind-registry:5000/chat-frontend:latest
+        ports:
+        - containerPort: 90
+        volumeMounts:
         - name: nginx-config
-          configMap:
-            name: chat-frontend-nginx-config
+          mountPath: /etc/nginx/conf.d/default.conf
+          subPath: nginx.conf
+      volumes:
+      - name: nginx-config
+        configMap:
+          name: chat-frontend-nginx-config
