--- a/kubernetes/chat-frontend/service.yaml
+++ b/kubernetes/chat-frontend/service.yaml
@@ -2,6 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: chat-frontend
+  annotations:
+    kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/whitelist-source-range: "127.0.0.1" 
 spec:
   selector:
     app: chat-frontend
