--- a/kubernetes/mongo/mongo.yaml
+++ b/kubernetes/mongo/mongo.yaml
@@ -1,22 +1,3 @@
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: mongo-data-pvc
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 5Gi
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: mongo-init
-data:
-  init-mongo.js: |
-    db.createCollection('messages');
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -36,30 +17,13 @@ spec:
       containers:
         - name: mongodb
           image: mongo:latest
+          command: ["mongod", "--bind_ip_all", "--dbpath=/data/db"]
           ports:
             - containerPort: 27017
           volumeMounts:
             - name: mongo-data
               mountPath: /data/db
-            - name: mongo-init
-              mountPath: /docker-entrypoint-initdb.d/init-mongo.js
-              subPath: init-mongo.js
       volumes:
         - name: mongo-data
           persistentVolumeClaim:
             claimName: mongo-data-pvc
-        - name: mongo-init
-          configMap:
-            name: mongo-init
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: mongodb
-spec:
-  selector:
-    app: mongodb
-  ports:
-    - port: 27017
-      targetPort: 27017
-  type: ClusterIP
