--- a/ai/frontend/nginx.conf
+++ b/ai/frontend/nginx.conf
@@ -1,28 +1,44 @@
 server {
     listen 91;
     server_name localhost;
-    root /usr/share/nginx/html;
-    index index.html index.htm;
     
-    # For Angular routing
+    # Define proper MIME types
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+    
+    # Important: Force MIME types for Angular assets
+    location ~* \.css$ {
+        root /usr/share/nginx/html;
+        add_header Content-Type text/css;
+    }
+    
+    location ~* \.js$ {
+        root /usr/share/nginx/html;
+        add_header Content-Type application/javascript;
+    }
+    
     location / {
+        root /usr/share/nginx/html;
         try_files $uri $uri/ /index.html;
+        add_header Cache-Control "no-store, no-cache, must-revalidate";
+    }
+    
+    # Serve index.html for SPA routes
+    location = /index.html {
+        root /usr/share/nginx/html;
+        add_header Cache-Control "no-cache";
     }
     
     # Proxy API requests to backend
     location /api {
         proxy_pass http://ai-backend:89;
         proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_cache_bypass $http_upgrade;
     }
     
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /usr/share/nginx/html;
-    }
+    # CORS headers
+    add_header 'Access-Control-Allow-Origin' '*' always;
+    add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+    add_header 'Access-Control-Allow-Headers' '*' always;
 }
