--- a/ai/frontend/package.json
+++ b/ai/frontend/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve --port 91 --host 0.0.0.0",
     "build": "ng build",
+    "build:inline": "ng build && npx gulp",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -27,6 +28,9 @@
     "@angular/cli": "^19.2.8",
     "@angular/compiler-cli": "^19.2.0",
     "@types/jasmine": "~5.1.0",
+    "gulp": "^5.0.0",
+    "gulp-inline-source": "^4.0.0",
+    "gulp-replace": "^1.1.4",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
