--- a/chat/frontend/Dockerfile
+++ b/chat/frontend/Dockerfile
@@ -2,13 +2,12 @@ FROM node:18-alpine AS builder
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
+RUN npm install --save-dev gulp gulp-replace
 COPY . .
-RUN npm run build 
+RUN npx gulp
 
 FROM nginx:alpine
-COPY ./dist/frontend/browser /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
-RUN chmod -R 755 /usr/share/nginx/html && \
-    ls -la /usr/share/nginx/html
+COPY --from=builder /app/dist/frontend/browser /usr/share/nginx/html
 EXPOSE 90
 CMD ["nginx", "-g", "daemon off;"]
