--- a/chat/frontend/nginx.conf
+++ b/chat/frontend/nginx.conf
@@ -3,15 +3,15 @@ server {
     server_name localhost;
     root /usr/share/nginx/html;
     index index.html index.htm;
-    
+
     # For Angular routing
     location / {
         try_files $uri $uri/ /index.html;
     }
-    
-    # Proxy WebSocket connections to backend
+
+    # Add necessary headers for WebSocket support
     location /ws {
-        proxy_pass http://backend:88;
+        proxy_pass http://chat-backend:88;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -20,7 +20,12 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_read_timeout 86400;
     }
-    
+
+    # Increase buffer sizes for stability
+    proxy_buffer_size 128k;
+    proxy_buffers 4 256k;
+    proxy_busy_buffers_size 256k;
+
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
         root /usr/share/nginx/html;
