--- a/chat/frontend/package.json
+++ b/chat/frontend/package.json
@@ -26,6 +26,8 @@
     "@angular/cli": "^19.2.8",
     "@angular/compiler-cli": "^19.2.0",
     "@types/jasmine": "~5.1.0",
+    "gulp": "^5.0.0",
+    "gulp-inline-source": "^4.0.0",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
