--- a/ingress.yaml
+++ b/ingress.yaml
@@ -5,26 +5,73 @@ metadata:
   namespace: default
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
-    nginx.ingress.kubernetes.io/use-regex: "true"
-    nginx.ingress.kubernetes.io/configuration-snippet: |
-      proxy_set_header X-Forwarded-Prefix /ai-service;
-
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
+    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
+    # This is crucial for WebSockets
+    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
+    nginx.ingress.kubernetes.io/proxy-buffering: "off"
+    spec.ingressClassName: nginx
 spec:
   rules:
-  - host: localhost
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: statamic-app
-            port:
-              number: 80
-      - path: /ai-service
-        pathType: Prefix
-        backend:
-          service:
-            name: ai-frontend
-            port:
-              number: 91
+    - host: localhost
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: statamic-app
+                port:
+                  number: 80
+          - path: /ai-service
+            pathType: Prefix
+            backend:
+              service:
+                name: ai-frontend
+                port:
+                  number: 91
+          - path: /chat-client
+            pathType: Prefix
+            backend:
+              service:
+                name: chat-frontend
+                port:
+                  number: 90
+          - path: /ws
+            pathType: Prefix
+            backend:
+              service:
+                name: chat-backend
+                port:
+                  number: 88
+    - http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: statamic-app
+                port:
+                  number: 80
+          - path: /ai-service
+            pathType: Prefix
+            backend:
+              service:
+                name: ai-frontend
+                port:
+                  number: 91
+          - path: /chat-client
+            pathType: Prefix
+            backend:
+              service:
+                name: chat-frontend
+                port:
+                  number: 90
+          - path: /ws
+            pathType: Prefix
+            backend:
+              service:
+                name: chat-backend
+                port:
+                  number: 88
