--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 //.gitignore
+.gitignore
 # Node.js
 node_modules/
 //node_modules
@@ -59,7 +60,7 @@ mongo-db-data/
 *.swo
 
 # Environment files
-.env
+//.env
 .env.local
 .env.development.local
 .env.test.local
