--- a/ai/frontend/Dockerfile
+++ b/ai/frontend/Dockerfile
@@ -1,13 +1,13 @@
-FROM node:18-alpine AS builder
+# Dockerfile
+FROM node:18-alpine AS build
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
-RUN npm install --save-dev gulp gulp-replace
 COPY . .
-RUN npx gulp
+RUN npm run build 
 
 FROM nginx:alpine
+COPY --from=build /app/dist/frontend/browser /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
-COPY --from=builder /app/dist/frontend/browser /usr/share/nginx/html
 EXPOSE 91
 CMD ["nginx", "-g", "daemon off;"]
