--- a/ai/backend/Dockerfile
+++ b/ai/backend/Dockerfile
@@ -1,7 +1,9 @@
-FROM node:18-alpine
+FROM node:18.20.8
+RUN apt-get update && apt-get install -y ca-certificates && update-ca-certificates
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
+COPY .env* ./
 COPY . .
 EXPOSE 89
-CMD ["npm", "start"]
+CMD ["node", "index.js"]
