--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+- secret.yaml
 - cms/statamic-deployment.yaml
 - chat/chat-deployment.yaml
 - ai/ai-deployment.yaml
