--- a/ai/frontend/Dockerfile
+++ b/ai/frontend/Dockerfile
@@ -1,10 +1,12 @@
-# Dockerfile
 FROM node:18-alpine AS build
+RUN apk add --no-cache libc6-compat
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
+RUN npm install --save-dev tailwindcss postcss autoprefixer gulp gulp-postcss gulp-replace
+RUN npx tailwindcss init -p
 COPY . .
-RUN npm run build 
+RUN npx gulp
 
 FROM nginx:alpine
 COPY --from=build /app/dist/frontend/browser /usr/share/nginx/html
