--- a/ai/frontend/package.json
+++ b/ai/frontend/package.json
@@ -35,6 +35,8 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.1",
-    "typescript": "~5.7.2"
+    "typescript": "~5.7.2",
+    "gulp": "^5.0.0",
+    "gulp-inline-source": "^4.0.0"
   }
 }
