--- a/ai/backend/Dockerfile
+++ b/ai/backend/Dockerfile
@@ -4,6 +4,7 @@ RUN apk add --no-cache ca-certificates tzdata \
  && update-ca-certificates
 WORKDIR /app
 COPY package*.json ./
+COPY . .
 RUN npm install
 COPY . .
 EXPOSE 89
