--- a/ai/frontend/Dockerfile
+++ b/ai/frontend/Dockerfile
@@ -1,15 +1,14 @@
-FROM node:18-alpine AS build
+FROM node:20-alpine AS builder
 RUN apk add --no-cache libc6-compat
 WORKDIR /app
 COPY package*.json ./
-RUN npm install
-RUN npm install --save-dev tailwindcss postcss autoprefixer gulp gulp-postcss gulp-replace
-RUN npx tailwindcss init -p
+RUN npm ci || npm install
 COPY . .
-RUN npx gulp
+ENV NODE_ENV=production
+RUN npm run build
 
 FROM nginx:alpine
-COPY --from=build /app/dist/frontend/browser /usr/share/nginx/html
+COPY --from=builder /app/dist/frontend/browser /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 91
 CMD ["nginx", "-g", "daemon off;"]
