--- a/ai/frontend/nginx.conf
+++ b/ai/frontend/nginx.conf
@@ -9,14 +9,30 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+    # Proxy API requests to backend
+    location /api {
+        proxy_pass http://ai-backend:89;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
     # Increase buffer sizes for stability
     proxy_buffer_size 128k;
     proxy_buffers 4 256k;
     proxy_busy_buffers_size 256k;
 
+    # Enable compression for better performance
+    gzip on;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+
+    # Error pages
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
         root /usr/share/nginx/html;
     }
 }
-
