--- a/ai/ai-deployment.yaml
+++ b/ai/ai-deployment.yaml
@@ -24,6 +24,8 @@ spec:
     metadata:
       labels:
         app: ai-backend
+      annotations:
+        azure.workload.identity/use: "true"
     spec:
       containers:
       - name: backend
