--- a/ai/backend/Dockerfile
+++ b/ai/backend/Dockerfile
@@ -1,7 +1,8 @@
 FROM node:20-alpine
-RUN apk add --no-cache ca-certificates tzdata \
- && sed -i '/DST Root CA X3/d' /etc/ssl/certs/ca-certificates.crt \
- && update-ca-certificates
+# RUN apk add --no-cache ca-certificates tzdata \
+#  && sed -i '/DST Root CA X3/d' /etc/ssl/certs/ca-certificates.crt \
+#  && update-ca-certificates
+RUN apk add --no-cache ca-certificates tzdata # Keep tzdata if needed elsewhere
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
