--- a/kubernetes/common/ingress.yaml
+++ b/kubernetes/common/ingress.yaml
@@ -11,6 +11,9 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
     nginx.ingress.kubernetes.io/proxy-buffering: "off"
     nginx.ingress.kubernetes.io/websocket-services: "chat-backend"
+    # Additional WebSocket configurations
+    nginx.ingress.kubernetes.io/connection-proxy-header: "keep-alive"
+    nginx.ingress.kubernetes.io/enable-cors: "true"
 spec:
   ingressClassName: nginx
   rules:
