--- a/kubernetes/common/ingress.yaml
+++ b/kubernetes/common/ingress.yaml
@@ -1,23 +1,31 @@
----
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: app-ingress
   namespace: default
   annotations:
+    # Critical WebSocket support
+    nginx.ingress.kubernetes.io/websocket-services: "chat-backend"
+    
+    # Prevent websocket timeouts
     nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
-    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
+    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
+    
+    # Keep connection alive
+    nginx.ingress.kubernetes.io/connection-proxy-header: "keep-alive"
+    nginx.ingress.kubernetes.io/upstream-vhost: "$host"
+    
+    # Other optimizations
     nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
     nginx.ingress.kubernetes.io/proxy-buffering: "off"
-    nginx.ingress.kubernetes.io/websocket-services: "chat-backend"
-    # Additional WebSocket configurations
-    nginx.ingress.kubernetes.io/connection-proxy-header: "keep-alive"
     nginx.ingress.kubernetes.io/enable-cors: "true"
+    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
 spec:
   ingressClassName: nginx
   rules:
-  - host: localhost
+  - host: localhost  # Change if needed
     http:
       paths:
       - path: /
@@ -55,6 +63,7 @@ spec:
             name: chat-frontend
             port:
               number: 90
+      # Special explicit WebSocket path with proper configuration
       - path: /ws
         pathType: Prefix
         backend:
@@ -62,29 +71,3 @@ spec:
             name: chat-backend
             port:
               number: 88
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: ai-backend-ingress
-  namespace: default
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /api/$2
-    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
-    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
-    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
-    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
-    nginx.ingress.kubernetes.io/proxy-buffering: "off"
-spec:
-  ingressClassName: nginx
-  rules:
-  - host: localhost
-    http:
-      paths:
-      - path: /ai-service/api(/|$)(.*)
-        pathType: Prefix
-        backend:
-          service:
-            name: ai-backend
-            port:
-              number: 89
