--- a/chat/backend/package.json
+++ b/chat/backend/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "mongodb": "^6.3.0",
     "async-retry": "^1.3.3",
-    "ws": "^8.14.2"
+    "ws": "^8.14.2",
+    "redis": "^4.6.7"
   }
 }
